<resources>
    <string name="app_name">ToDoListApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_some_todo_your_todo_list_will_display_here">Add Some ToDo .Your Todo List Will Display here</string>
    <string name="title">Add Your Todo Here :</string>
    <string name="add_reminder">Do You Want Reminder For this ToDo ?</string>
    <string name="todoPriority">Choose priority of Your ToDo</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="fabForSavingToDo">fabForSavingToDo</string>
    <string name="select_date_for_your_todo">Select Date For Your ToDo</string>
    <string name="set_time_for_your_todo">Set Time For Your ToDo</string>
    <string name="save_todo">Save Todo</string>
    <string name="add_todo">Add ToDo</string>
    <string name="error_msg_for_title_tinl">Plese Addd Some Title</string>
    <string name="date_error">Please Select Date</string>
    <string name="time_error">Please select Time</string>
    <string name="title_for_todo">Title</string>
    <string name="prefix_title">Title</string>
    <string name="update_todo">Update ToDo</string>
    <string name="hide_complete">Hide Complete</string>
    <string name="search">Search</string>
    <string name="sort">Sort By</string>
    <string name="sort_by_high_priority">Sort By High Priority</string>
    <string name="sort_by_medium_priority">Sort By Medium Priority</string>
    <string name="sort_by_low_priority">Sort By Low Priority</string>
    <string name="delete_all">Delete All</string>
    <string name="dialog_title">Delete All Completed Todo ?</string>
    <string name="dialog_message">This action will delete all Completed ToDo.</string>
    <string name="dialog_yes_button">Yes</string>
    <string name="dialog_no_button">No</string>
    <string name="all_completed_todo">All Completed ToDo </string>
    <string name="completed_todo">Completed ToDo</string>
</resources>