<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:orientation="vertical">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutToDo"
        style="@style/primaryEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateTxtInputLayout"
        style="@style/primaryEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/select_date_for_your_todo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_baseline_date_range_24"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timeTimeInputLayout"
        style="@style/primaryEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/set_time_for_your_todo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timeEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_baseline_access_time_filled_24"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/priorityTxtLayout"
        style="@style/priorityDropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todopriority"
        app:boxBackgroundColor="@color/cardview_light_background">

        <AutoCompleteTextView
            android:id="@+id/etPrioritySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:labelFor="@id/etPrioritySpinner" />
    </com.google.android.material.textfield.TextInputLayout>





    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/reminderSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/switchReminder"
       />


</LinearLayout>